# object-detection-worker

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  github-secrets-final.txt  pyproject.toml  requirements.txt  setup-gke-credentials.sh  worker.py
.github/workflows/: deploy.yml
k8s/: api-deployment.yaml  configmap.yaml  configmap.yml  deployment.yaml  deployment.yml  hpa.yaml  hpa.yml  ingress-gcp.yml  ingress.yaml  namespace.yaml  namespace.yml  networkpolicy.yml  rbac.yaml  redis-deployment.yaml  redis-gcp.yml  secret.yaml  secret.yml  service.yaml  service.yml  serviceaccount.yaml  serviceaccount.yml  storageclass-gcp.yml  worker-deployment.yaml
scripts/: build-push.sh  check-cluster-capacity.sh  deploy-k8s.sh  deploy-manual.sh  enable-autoscaling.sh  manage-scaling.sh  monitor.sh  scale-nodepool.sh  setup-aws.sh  setup-gcp-auth.sh  setup-gcp.sh  verify-pubsub.sh
src/: main.py
src/application/use_cases/: process_detection_task.py
src/domain/entities/: detection_result.py  serializers.py
src/domain/repositories/: callback_service.py  detection_model.py  image_repository.py  task_repository.py
src/infrastructure/: config.py
src/infrastructure/models/: rfdetr_model.py
src/infrastructure/repositories/: gcs_image_repository.py  pubsub_task_processor.py  redis_task_repository.py  s3_image_repository.py
src/infrastructure/services/: http_callback_service.py  internal_api_callback_service.py  simple_task_processor.py  task_processor.py
tests/integration/: test_detection_flow.py
tests/unit/domain/entities/: test_detection_result.py  (+1 more)
(+2 files in other folders)
